ecs.tf
#create ecs
resource "aws_ecs_cluster" "test" {
    name = "test"
  
}

#create cloudwatch 
resource "aws_cloudwatch_log_group" "log-group" {
    name = "/ecs/foto"
  
}

resource "aws_cloudwatch_log_stream" "log_stream" {
    name="log-stream"
    log_group_name = aws_cloudwatch_log_group.log-group.name 
}

#create task definition 
resource "aws_ecs_task_definition" "task-foto" {
    family = "task-foto"
    network_mode = "awsvpc"
    requires_compatibilities = ["FARGATE"]
    cpu   = "1024"
    memory = "2048"

    execution_role_arn = "arn:aws:iam::190177667055:role/ecsTaskExecutionRole"

    task_role_arn  = "arn:aws:iam::190177667055:role/ecsTaskExecutionRole"

    container_definitions = jsonencode([
        {
        name      = "tmp3"
        image     = "190177667055.dkr.ecr.us-east-1.amazonaws.com/tmp3:latest"
        
        cpu       = 10
        memory    = 512
        essential = true
        
        environment = [
                {
                    "name": "ACCESS_TOKEN_SECRET_PUBLIC",
                    "value": "-----BEGIN PUBLIC KEY-----MIICITANBgkqhkiG9w0BAQEFAAOCAg4AMIICCQKCAgBjNu1Hyk4NBORBj6xS0QcwdLhFC9PMoGi0a5DcQ06YiihppphWF7rTRZnmne1EN4xD2xO38od2vgAVNCtMoQ5RQaVaRwMolY96d6awc3+dXb4oAR/AQvdu73wPDSwMJd7YcO1TUS3xElkD02+EcHXr1wz1NhfC/M6wRFP2fX9+A9RaKo8t1FsrCfjek+SEezSAvtv9JBF7ZyNEO+8V2igojl2P6YEPLGR/juWa6ebU1mbga0zz8J7MGvelGxDg/ghgCLgzwRfWdJJUbYoMnJUXXeIHUyDj8RNt7yZc85iRxeKUbeLhqX8miIkRHKWt6IKqq5gaRrdVHtBieAfoG9t4mmhCNvDE/jNZoLum2IbTYOkzGEqVcLuvIzOaX1+mw89z8lrqsSffweCEBEO7 [...]
                },
                {
                    "name": "REFRESH_TOKEN_SECRET_PRIVATE",
                    "value": "-----BEGIN RSA PRIVATE KEY-----\nMIIJKAIBAAKCAgEAh8N7XybcGeueFhA96RNkXrtH2XrKsJxD4FX9WKl0wGshPyXh4k+gvN904TU6yqGhqLBvStXHkK674XARougv/E0RTV5AhEgWSYggRA954svm63UiqfHv77ghof8tY58aT6Ov0rA+2Y2K046yPb2w2WkoXgaYssPCsS+PEdZRH56uO3CCrX/QVSJZ52UuUant2V+vZr37M/0iQWmI2x3pOsIsxqLkj9s0cyK5+xBHKrwpRlYxOPD75dYK6WpEEJzhieO68SbwkIViCLMu48AmjHE6XJmRnqAVmfO2f/fGTx/AgFCnoIWO3bxrQRWLj7KL0s1ucZu0PWVUHZm8PsFviY3D1yDh5RTXBglRBPAjqVOTX9R6aQiciGlrOyOrgFbfPAm/f617fyK+fLCUf1tPBGyTNnhCC+PaOXmGB [...]
                },
                
              
                {
                    "name": "ACCESS_TOKEN_SECRET_PRIVATE",
                    "value": "-----BEGIN RSA PRIVATE KEY-----\nMIIJJwIBAAKCAgBjNu1Hyk4NBORBj6xS0QcwdLhFC9PMoGi0a5DcQ06YiihppphWF7rTRZnmne1EN4xD2xO38od2vgAVNCtMoQ5RQaVaRwMolY96d6awc3+dXb4oAR/AQvdu73wPDSwMJd7YcO1TUS3xElkD02+EcHXr1wz1NhfC/M6wRFP2fX9+A9RaKo8t1FsrCfjek+SEezSAvtv9JBF7ZyNEO+8V2igojl2P6YEPLGR/juWa6ebU1mbga0zz8J7MGvelGxDg/ghgCLgzwRfWdJJUbYoMnJUXXeIHUyDj8RNt7yZc85iRxeKUbeLhqX8miIkRHKWt6IKqq5gaRrdVHtBieAfoG9t4mmhCNvDE/jNZoLum2IbTYOkzGEqVcLuvIzOaX1+mw89z8lrqsSffweCEBEO7meUXhvcYx5fTSVriCqhbN [...]
                },
                
                
               
                {
                    "name": "REFRESH_TOKEN_SECRET_PUBLIC",
                    "value": "-----BEGIN PUBLIC KEY-----MIICIjANBgkqhkiG9w0BAQEFAAOCAg8AMIICCgKCAgEAh8N7XybcGeueFhA96RNkXrtH2XrKsJxD4FX9WKl0wGshPyXh4k+gvN904TU6yqGhqLBvStXHkK674XARougv/E0RTV5AhEgWSYggRA954svm63UiqfHv77ghof8tY58aT6Ov0rA+2Y2K046yPb2w2WkoXgaYssPCsS+PEdZRH56uO3CCrX/QVSJZ52UuUant2V+vZr37M/0iQWmI2x3pOsIsxqLkj9s0cyK5+xBHKrwpRlYxOPD75dYK6WpEEJzhieO68SbwkIViCLMu48AmjHE6XJmRnqAVmfO2f/fGTx/AgFCnoIWO3bxrQRWLj7KL0s1ucZu0PWVUHZm8PsFviY3D1yDh5RTXBglRBPAjqVOTX9R6aQiciGlrOyOrgFbfPAm/f617fyK+fLCU [...]
                },

            ],
        logConfiguration= {
                "logDriver": "awslogs",
                "options": {
                    "awslogs-create-group": "true",
                    "awslogs-group": "/ecs/foto",
                    "awslogs-region": "us-east-1",
                    "awslogs-stream-prefix": "ecs"
                }
            }

        

        requiresAttributes = [
            {
            "name": "com.amazonaws.ecs.capability.logging-driver.awslogs"
        },
        {
            "name": "ecs.capability.execution-role-awslogs"
        },
        {
            "name": "com.amazonaws.ecs.capability.ecr-auth"
        },
        {
            "name": "com.amazonaws.ecs.capability.docker-remote-api.1.19"
        },
        {
            "name": "com.amazonaws.ecs.capability.task-iam-role"
        },
        {
            "name": "ecs.capability.execution-role-ecr-pull"
        },
        {
            "name": "com.amazonaws.ecs.capability.docker-remote-api.1.18"
        },
        {
            "name": "ecs.capability.task-eni"
        },
        {
            "name": "com.amazonaws.ecs.capability.docker-remote-api.1.29"
        }
        ]
        


        portMappings = [
            {
            containerPort = 9090
            hostPort      = 9090
            protocol = "tcp",
            }
      ]
    }])
}


#ecs-service


resource "aws_ecs_service" "ecs-service" {
    cluster=aws_ecs_cluster.test.arn
    name = "service-name"
    
    task_definition = aws_ecs_task_definition.task-foto.arn
    #task_definition = "arn:aws:ecs:us-east-1:190177667055:task-definition/latest:9"
    desired_count = 2
    scheduling_strategy = "REPLICA"
    launch_type = "FARGATE"

    network_configuration {
      security_groups = [aws_security_group.ecs-sg.id]
      subnets = [aws_subnet.main-private-2.id]
      assign_public_ip = true

    }

    load_balancer {
      target_group_arn = aws_lb_target_group.target-group.arn
      container_name = "tmp3"
      container_port = 9090
    }
  
  
}
